--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Virufy",
-  "name": "Virufy APP",
+  "short_name": "Virufy Demo",
+  "name": "Virufy APP Demo",
   "icons": [
     {
       "src": "manifest-icon-192.png",
