--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dompurify": "^2.2.6",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
+    "libflacjs": "^5.4.0",
     "little-state-machine": "^4.0.0",
     "react": "^17.0.1",
     "react-compound-timer": "^1.2.0",
@@ -84,7 +85,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "workerize-loader": "^1.3.0"
   },
   "eslintConfig": {
     "extends": "react-app"
