--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.14.2",
     "react-i18next": "^11.8.5",
+    "react-modal": "^3.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slide-routes": "^0.14.0",
@@ -69,6 +70,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-google-recaptcha": "^2.1.0",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "@types/yup": "^0.29.11",
