update prediction result texts LCC-304

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,8 @@
     "react/jsx-props-no-spreading": 0,
     "react/jsx-one-expression-per-line": "off",
     "react/require-default-props": 0,
-    "global-require": 0
+    "global-require": 0,
+    "linebreak-style": 0
   },
   "settings": {
     "import/parsers": {
