Removed eslint destructuring requirement

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,7 +42,8 @@
     "react/jsx-one-expression-per-line": "off",
     "react/require-default-props": 0,
     "global-require": 0,
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "react/destructuring-assignment": "off"
   },
   "settings": {
     "import/parsers": {
