fixed recording bug

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         ]
       }
     ],
+    "jsx-a11y/label-has-associated-control": "off",
     "lines-between-class-members": 0,
     "max-len": [
       "error",
@@ -40,6 +41,8 @@
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-props-no-spreading": 0,
     "react/jsx-one-expression-per-line": "off",
+    "react/jsx-tag-spacing": "off",
+    "react/react-in-jsx-scope": "off",
     "react/require-default-props": 0,
     "global-require": 0,
     "linebreak-style": 0
