--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "typeRoots": [
       "node_modules/@types"
     ],
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": []
   },
   "include": [
     "src",
