Revert "Fix RTL alignment for Arabic (global.css, PredictionResult [resultModalDummy + resultNotDetectedText], i18n, tsc)"

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,7 @@
     "typeRoots": [
       "node_modules/@types"
     ],
-    "noFallthroughCasesInSwitch": true,
-    "types": []
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src",
