--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,22 +14,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the code
       - uses: actions/checkout@v4
 
-      # Set up Node.js
       - uses: actions/setup-node@v4
         with:
           node-version: 16
           cache: "npm"
 
-      # Install dependencies
       - run: npm ci
-
-      # Build the React app
       - run: npm run build
 
-      # Upload the build folder as the artifact for GitHub Pages
       - uses: actions/upload-pages-artifact@v3
         with:
           path: build
@@ -37,5 +31,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-deploy
+    environment:
+      name: github-pages
     steps:
       - uses: actions/deploy-pages@v4
